--- a/static/style.css
+++ b/static/style.css
@@ -257,6 +257,56 @@ th {
     letter-spacing: 1px;
 }
 
+th.sortable {
+    cursor: pointer;
+    user-select: none;
+    position: relative;
+    padding-right: 1.5rem;
+}
+
+th.sortable:hover {
+    color: #fff;
+    text-shadow: 0 0 5px #ff0;
+}
+
+th.sortable::after {
+    content: '';
+    position: absolute;
+    right: 0.5rem;
+    top: 50%;
+    transform: translateY(-50%);
+    border: 4px solid transparent;
+    border-top-color: #444;
+    margin-top: 4px;
+}
+
+th.sortable::before {
+    content: '';
+    position: absolute;
+    right: 0.5rem;
+    top: 50%;
+    transform: translateY(-50%);
+    border: 4px solid transparent;
+    border-bottom-color: #444;
+    margin-top: -4px;
+}
+
+th.sortable.sorted.asc::after {
+    border-top-color: #0f0;
+}
+
+th.sortable.sorted.asc::before {
+    border-bottom-color: #444;
+}
+
+th.sortable.sorted.desc::before {
+    border-bottom-color: #0f0;
+}
+
+th.sortable.sorted.desc::after {
+    border-top-color: #444;
+}
+
 td {
     color: #aaa;
 }
