Self-hosting fonts

--- a/static/style.css
+++ b/static/style.css
@@ -1,5 +1,13 @@
 /* Dwarf Fortress Style Theme */
-@import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
+
+/* Self-hosted Press Start 2P font */
+@font-face {
+    font-family: 'Press Start 2P';
+    font-style: normal;
+    font-weight: 400;
+    font-display: block;
+    src: url('fonts/press-start-2p.woff2') format('woff2');
+}
 
 /* ===========================================
    Critical Styles - Above the fold
